1_task/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - path: "/dev"
        backend: 
          serviceName: dev-application-svc
          servicePort: 80
      - path: "/prod"
        backend:
          serviceName: prod-application-svc
          servicePort: 80
